ghost/ghost-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  labels:
    app: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:3-alpine
          ports:
            - containerPort: 2368
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
spec:
  selector:
    app: ghost
  ports:
    - port: 80
      targetPort: 2368
      protocol: TCP
      # 4fa205e16ca0cf0b989faaa0fe
      # 5fdcbc758ea9e70001960005:c85b6fd4d32a1b79b2d9db0a9d2e8fdd8ecf44f51f4a1687c6be3f9511dd0e03
