ghost/ghost-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ghost-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - ghost-ingress.airlan.cv.ua
      secretName: ghost-ingress-tls-secret
  rules:
    - host: ghost-ingresss.airlan.cv.ua
      http:
        paths:
          - backend:
              serviceName: ghost-service
              servicePort: 80
